@@ -1,4 +1,4 @@
-MANIFEST for byacc, version t20081124
+MANIFEST for byacc, version t20081126
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 ACKNOWLEDGEMENTS                original version of byacc - 1993
